@@ -33,7 +33,6 @@
                  site_properties context/portal_properties/site_properties;
                  desc_length site_properties/search_results_description_length;
                  desc_ellipsis site_properties/ellipsis;
-                 searchterm request/SearchableText|nothing;
                  use_view_action site_properties/typesUseViewActionInListings|python:();
                  portal_url context/portal_url;
                  is_advanced_search request/form/advanced_search|nothing;
@@ -144,7 +143,7 @@
         <tal:entry define="result_url result/getURL;
                            result_type result/portal_type;
                            item_icon python:plone_view.getIcon(result);
-                           url python:'%s?searchterm=%s'%(test(result_type in use_view_action, result_url+'/view', result_url+'/'), searchterm);">
+                           url python:test(result_type in use_view_action, result_url+'/view', result_url+'/');">
             <dt tal:define="item_wf_state_class string:state-${result/review_state};"
                 tal:attributes="class python:'contenttype-' + normalizeString(result.portal_type)">
               <img tal:replace="structure item_icon/html_tag" />
